--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,6 +1,8 @@
-<div class="p-2 d-flex flex-column align-items-center my-3 mx-5">
+<div class="p-2 d-flex flex-column align-items-center my-3 mx-5 rounded book-section">
   <div class="book rounded mb-3"></div>
   <span class="font-weight-bold text-dark">{{name}}</span>
   <span class="my-1 sm-text text-muted" *ngFor="let a of authors">{{a}}</span>
-  <span class="my-1 sm-text text-muted font-weight-light" *ngFor="let g of genre.slice(1)">{{g}}</span>
+  <div class="d-flex">
+    <span class="m-1 sm-text text-muted font-weight-light" *ngFor="let g of genre.slice(0, 2)">{{g}}</span>
+  </div>
 </div>
